[metadata]
name = wlc
version = attr: wlc.__version__
description = A command line utility for Weblate, translation tool with tight version control integration
long_description = file: README.md
long_description_content_type = text/markdown
url = https://weblate.org/
author = Michal Čihař
author_email = michal@cihar.com
license = GPL-3.0-or-later
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Internationalization
    Topic :: Software Development :: Localization
    Topic :: Utilities
download_url = https://github.com/WeblateOrg/wlc
keywords = i18n l10n gettext git mercurial translate
project_urls =
    Issue Tracker=https://github.com/WeblateOrg/wlc/issues
    Documentation=https://docs.weblate.org/
    Source Code=https://github.com/WeblateOrg/wlc
    Twitter=https://twitter.com/WeblateOrg

[options]
packages = wlc
python_requires = >=3.6
package_dir = wlc=wlc
include_package_data = 1

[options.entry_points]
console_scripts =
    wlc = wlc.main:main

[flake8]
max-complexity = 16
select = E,W1,W2,W3,W504,W505,W6
enable-extensions = B,C,D,F,G,I,M,N,R,SF
# Should be fixed:
#  D10 - we are missing many docstrings
#  D20* - wrong docstring formatting
#  D40* - many strings need rephrasing
ignore = D10,D200,D202,D204,D205,D209,D401
exclude = .git,docs,.venv,build,.eggs
max-line-length = 88

[pycodestyle]
select = E,W1,W2,W3,W504,W505,W6
exclude = .git,docs,.venv,build,.eggs
max-line-length = 88
